refactor: listings rework
- Separate PartListing and VehicleListing from common entity class Listings
- Implemented categories for listings
- Removed ListingRepository
- Changed visibility modifier of VehicleListingResponse constructor to protected